tests/neg-custom-args/captures/i15772.check
-- Error: tests/neg-custom-args/captures/i15772.scala:22:46 ------------------------------------------------------------
22 |    val boxed1 : ((C^) => Unit) -> Unit = box1(c)  // error
   |                                          ^^^^^^^
   |C^ => Unit cannot be box-converted to C{val arg: C^²}^{c} ->{cap, c} Unit
   |since the additional capture set {c} resulting from box conversion is not allowed in C{val arg: C^²}^{c} => Unit
   |
   |where:    =>  refers to the universal root capability
   |          ^   refers to the universal root capability
   |          ^²  refers to a fresh root capability in the type of value arg
   |          cap is the universal root capability
-- Error: tests/neg-custom-args/captures/i15772.scala:29:35 ------------------------------------------------------------
29 |    val boxed2 : Observe[C^] = box2(c)  // error
   |                               ^^^^^^^
   |C^ => Unit cannot be box-converted to C{val arg: C^²}^{c} ->{cap, c} Unit
   |since the additional capture set {c} resulting from box conversion is not allowed in C{val arg: C^²}^{c} => Unit
   |
   |where:    =>  refers to the universal root capability
   |          ^   refers to the universal root capability
   |          ^²  refers to a fresh root capability in the type of value arg
   |          cap is the universal root capability
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:35:33 ---------------------------------------
35 |  val boxed2 : Observe[C]^ = box2(c) // error
   |                             ^^^^^^^
   |Found:    (C{val arg: C^}^² => Unit) -> Unit
   |Required: (C => Unit) =>² Unit
   |
   |where:    =>  refers to the universal root capability
   |          =>² refers to a fresh root capability in the type of value boxed2
   |          ^   refers to a fresh root capability in the type of value arg
   |          ^²  refers to a fresh root capability created in value boxed2 when instantiating method c's type -> C^{cap}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:46:2 ----------------------------------------
46 |  x: (() -> Unit) // error
   |  ^
   |  Found:    (x : () ->{filesList, sayHello} Unit)
   |  Required: () -> Unit
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i15772.scala:34:10 ------------------------------------------------------------
34 |  def c : C^ = new C(x) // error separation
   |          ^^
   |          Separation failure: method c's result type C^ hides non-local parameter x
